; ModuleID = '/home/carl/AnghaBench/esp-idf/components/spi_flash/test/esp32/extr_test_esp_flash.c_test_metadata.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/spi_flash/test/esp32/extr_test_esp_flash.c_test_metadata.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@TAG = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [19 x i8] c"Testing chip %p...\00", align 1
@.str.1 = private unnamed_addr constant [38 x i8] c"Flash ID %08x detected size %d bytes\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*)* @test_metadata to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_metadata(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32* %0, i32** %2, align 8
  %5 = load i32, i32* @TAG, align 4
  %6 = load i32*, i32** %2, align 8
  %7 = call i32 @ESP_LOGI(i32 %5, i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str, i64 0, i64 0), i32* %6)
  %8 = load i32*, i32** %2, align 8
  %9 = call i32 @esp_flash_read_id(i32* %8, i32* %3)
  %10 = call i32 @TEST_ESP_OK(i32 %9)
  %11 = load i32*, i32** %2, align 8
  %12 = call i32 @esp_flash_get_size(i32* %11, i32* %4)
  %13 = call i32 @TEST_ESP_OK(i32 %12)
  %14 = load i32, i32* %3, align 4
  %15 = load i32, i32* %4, align 4
  %16 = call i32 @printf(i8* getelementptr inbounds ([38 x i8], [38 x i8]* @.str.1, i64 0, i64 0), i32 %14, i32 %15)
  ret void
}

declare dso_local i32 @ESP_LOGI(i32, i8*, i32*) #1

declare dso_local i32 @TEST_ESP_OK(i32) #1

declare dso_local i32 @esp_flash_read_id(i32*, i32*) #1

declare dso_local i32 @esp_flash_get_size(i32*, i32*) #1

declare dso_local i32 @printf(i8*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
